--- a/VidCoder/Resources/WatcherRes.resx
+++ b/VidCoder/Resources/WatcherRes.resx
@@ -117,8 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddFolderToWatch" xml:space="preserve">
+    <value>Add folder to watch</value>
+  </data>
+  <data name="ConfigureFoldersButton" xml:space="preserve">
+    <value>Configure folders</value>
+  </data>
   <data name="InstallWatcherButton" xml:space="preserve">
     <value>Install Watcher service</value>
+  </data>
+  <data name="PickerLabel" xml:space="preserve">
+    <value>Picker:</value>
+  </data>
+  <data name="PresetLabel" xml:space="preserve">
+    <value>Encoding preset:</value>
   </data>
   <data name="ServiceInstallError" xml:space="preserve">
     <value>Could not install file watcher service.</value>
@@ -128,6 +140,12 @@
   </data>
   <data name="UninstallWatcherButton" xml:space="preserve">
     <value>Uninstall Watcher service</value>
+  </data>
+  <data name="WatchedFolderTextBoxLabel" xml:space="preserve">
+    <value>Watched folder</value>
+  </data>
+  <data name="WatcherConfigDialogTitle" xml:space="preserve">
+    <value>Watcher configuration</value>
   </data>
   <data name="WatcherIntroText" xml:space="preserve">
     <value>You can set up the Watcher to observe folders and automatically encode videos that show up in them. The Watcher service will run when VidCoder is closed and launch it to encode files.</value>
