Changed watcher to be a background process instead of a Windows Service. Changed all installer registry keys to CurrentUser to avoid a UAC prompt. Changed watcher controls to two checkboxes. Refactored watcher process management to WatcherProcessManager

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -360,4 +360,16 @@
   <data name="Deinterlace_Bwdif" xml:space="preserve">
     <value>Bwdif</value>
   </data>
+  <data name="WatcherProcessStatus_Disabled" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="WatcherProcessStatus_Running" xml:space="preserve">
+    <value>Running</value>
+  </data>
+  <data name="WatcherProcessStatus_Starting" xml:space="preserve">
+    <value>Starting...</value>
+  </data>
+  <data name="WatcherProcessStatus_Stopped" xml:space="preserve">
+    <value>Stopped</value>
+  </data>
 </root>
