--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -372,19 +372,25 @@
   <data name="WatcherProcessStatus_Stopped" xml:space="preserve">
     <value>Stopped</value>
   </data>
-  <data name="WatchedFileStatus_Canceled" xml:space="preserve">
+  <data name="WatchedFileStatusLive_Canceled" xml:space="preserve">
     <value>Canceled</value>
   </data>
-  <data name="WatchedFileStatus_Failed" xml:space="preserve">
+  <data name="WatchedFileStatusLive_Encoding" xml:space="preserve">
+    <value>Encoding</value>
+  </data>
+  <data name="WatchedFileStatusLive_Failed" xml:space="preserve">
     <value>Failed</value>
   </data>
-  <data name="WatchedFileStatus_Planned" xml:space="preserve">
+  <data name="WatchedFileStatusLive_Planned" xml:space="preserve">
     <value>Planned</value>
   </data>
-  <data name="WatchedFileStatus_Skipped" xml:space="preserve">
+  <data name="WatchedFileStatusLive_Queued" xml:space="preserve">
+    <value>Queued</value>
+  </data>
+  <data name="WatchedFileStatusLive_Skipped" xml:space="preserve">
     <value>Skipped</value>
   </data>
-  <data name="WatchedFileStatus_Succeeded" xml:space="preserve">
+  <data name="WatchedFileStatusLive_Succeeded" xml:space="preserve">
     <value>Succeeded</value>
   </data>
 </root>
