Added ability to avoid re-encoding files with the watcher by marking them with the "Output" status

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -393,4 +393,7 @@
   <data name="WatchedFileStatusLive_Succeeded" xml:space="preserve">
     <value>Succeeded</value>
   </data>
+  <data name="WatchedFileStatusLive_Output" xml:space="preserve">
+    <value>Output</value>
+  </data>
 </root>
